# llvm-project

.github/workflows/: test.yml
clang/lib/Hsh/: CMakeLists.txt  dxc.patch  uam.patch
libhsh/: CMakeLists.txt
llvm/: CMakeLists.txt
